# FunkinCpp

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  Funkin.Shared.sln  README.md
Funkin/: FunkinState.cpp  FunkinState.h  imports.h  main.cpp
Funkin.NX/: Makefile
Funkin.Shared/: Funkin.Shared.vcxitems  Funkin.Shared.vcxitems.filters  main.cpp
Funkin.Shared/assets/data/: config.json
Funkin.Shared/assets/data/characters/: pwned.json
Funkin.Shared/assets/data/stages/: stage.json
Funkin.Shared/funkin/game/: GameConfig.h
Funkin.Shared/funkin/play/: CameraManager.cpp  PauseHandler.h  PlayStateRenderer.h
Funkin.Shared/funkin/play/character/: Character.cpp  CharacterManager.cpp
Funkin.Shared/funkin/play/components/: HealthBar.cpp
Funkin.Shared/funkin/play/input/: Controls.cpp  Controls.h
Funkin.Shared/funkin/play/notes/: NoteHitHandler.cpp  NoteManager.cpp  NoteManager.h  NoteSprite.cpp  NoteSprite.h  NoteUpdateHandler.cpp  NoteUpdateHandler.h
Funkin.Shared/funkin/play/scoring/: Scoring.cpp
Funkin.Shared/funkin/play/song/: Song.cpp  SongLoader.cpp
Funkin.Shared/funkin/play/stage/: Stage.cpp
Funkin.Shared/funkin/scripting/: ScriptAPI.h
Funkin.Shared/funkin/ui/: CreditsState.cpp
Funkin.VisualC/: Funkin.VisualC.vcxproj
Funkin/game/: Section.cpp
Funkin/play/: CameraManager.h  GameOverSubState.cpp  GameplayManager.cpp  PauseHandler.cpp  PauseSubState.cpp  PlayState.cpp  PlayState.h
Funkin/play/character/: CharacterManager.h
Funkin/play/components/: HealthBar.h
Funkin/play/input/: Controls.h
Funkin/play/notes/: NoteHitHandler.cpp  NoteHitHandler.h  NoteManager.cpp  NoteManager.h  NoteSprite.cpp  NoteSprite.h  NoteUpdateHandler.cpp  Strumline.cpp  Strumline.h
Funkin/play/scoring/: Highscore.h
Funkin/play/stage/: Stage.h
Funkin/scripting/: Script.h
Funkin/ui/: CreditsState.cpp  MainMenuState.cpp  NewFreeplayState.cpp  OptionsState.cpp  StoryMenuState.cpp  TitleState.cpp
Funkin/ui/components/: Alphabet.cpp  Alphabet.h  CheckBox.cpp  CheckBox.h  MenuCharacter.cpp  MenuCharacter.h  MenuItem.cpp  MenuItem.h
Funkin/ui/freeplay/: Capsule.h
assets/data/: config.json
assets/data/characters/: bf.json  dad.json  gf.json
assets/data/dadbattle/: dadbattle-hard.json  dadbattle.json
assets/data/stages/: stage.json
assets/images/chars/: pwnfnf.xml
assets/images/menu/freeplay/icons/: ty.xml
assets/scripts/characters/: gf.txt
assets/scripts/songs/: bopeebo.txt
assets/songs/dadbattle/: dadbattle-easy.json
assets/songs/shitton-of-notes/: shitton-of-notes-hard.json
lib/flixel/: FlxBasic.h  FlxCamera.cpp  FlxCamera.h  FlxG.h  FlxGame.cpp  FlxGame.h  FlxObject.h  FlxSprite.h  FlxState.cpp  FlxSubState.cpp
lib/flixel/addons/transition/: FlxTransitionEffect.cpp  FlxTransitionEffect.h  TransitionData.h
lib/flixel/animation/: FlxAnimation.h  FlxAnimationController.h
lib/flixel/effects/: FlxFlicker.cpp
lib/flixel/graphics/frames/: FlxAtlasFrames.h
lib/flixel/input/: FlxGamepad.h  FlxInput.h  FlxKeyboard.h
lib/flixel/math/: FlxMatrix.h  FlxPoint.h
lib/flixel/sound/: FlxSound.cpp  FlxSound.h  FlxSoundGroup.cpp  FlxSoundGroup.h
lib/flixel/text/: FlxText.cpp  FlxText.h
lib/flixel/tweens/: FlxEase.h  FlxTween.h  FlxTweenUtil.h
lib/flixel/util/: FlxAxes.h  FlxTimer.cpp
src/: imports.h  main.cpp
src/funkin/: FunkinState.cpp  FunkinState.h
src/funkin/game/: Character.cpp  Character.h  GameConfig.cpp  GameConfig.h  HealthIcon.h  Note.cpp  Note.h  Section.h  Song.cpp  Song.h  Stage.cpp
src/funkin/play/: CameraManager.cpp  CameraManager.h  Countdown.cpp  Countdown.h  GameOverSubState.cpp  GameOverSubState.h  GameplayManager.cpp  GameplayManager.h  PauseHandler.cpp  PauseHandler.h  PauseSubState.cpp  PauseSubState.h  PlayState.cpp  PlayState.h  PlayStateRenderer.cpp
src/funkin/play/character/: Character.cpp  Character.h  CharacterManager.cpp
src/funkin/play/components/: HealthBar.cpp  HealthBar.h  HealthIcon.cpp  PopUpStuff.cpp  PopUpStuff.h
src/funkin/play/input/: Controls.cpp  Controls.h
src/funkin/play/notes/: NoteHitHandler.cpp  NoteHitHandler.h  NoteSprite.cpp  NoteUpdateHandler.cpp  Strumline.cpp
src/funkin/play/scoring/: Highscore.cpp  Scoring.h
src/funkin/play/song/: Song.cpp  Song.h  SongLoader.cpp  SongLoader.h
src/funkin/play/stage/: Stage.cpp  Stage.h
src/funkin/scripting/: Script.cpp  ScriptAPI.cpp  ScriptManager.cpp  ScriptManager.h  ScriptTypes.h
src/funkin/states/: PlayState.cpp  PlayState.h
src/funkin/substates/: PauseSubState.cpp
src/funkin/ui/: CreditsState.h  MainMenuState.cpp  MainMenuState.h  NewFreeplayState.cpp  NewFreeplayState.h  OptionsState.cpp  OptionsState.h  StoryMenuState.cpp  StoryMenuState.h  TitleState.cpp  TitleState.h
src/funkin/ui/components/: Alphabet.cpp  Alphabet.h  AtlasMenuItem.cpp  AtlasMenuItem.h  CheckBox.cpp  MenuCharacter.cpp  MenuItem.cpp
src/funkin/ui/freeplay/: Capsule.cpp  DigitDisplay.cpp  DigitDisplay.h
